--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html"> Lasagna Recipe </a>
+    <ul>
+        <li><a href="recipes/lasagna.html"> Lasagna Recipe </a></li>
+        <li><a href="recipes/jollof-rice.html"> Jollof Rice Recipe </a></li>
+    </ul>
 </body>
 </html>
