--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/lasagna.html"> Lasagna Recipe </a></li>
         <li><a href="recipes/jollof-rice.html"> Jollof Rice Recipe </a></li>
+        <li><a href="recipes/amala.html"> Amala Recipe </a></li>
     </ul>
 </body>
 </html>
