fic img bug in amala.htnl

--- a/recipes/amala.html
+++ b/recipes/amala.html
@@ -11,7 +11,7 @@
 
 		<h1>Amala Recipe</h1>
 
-		<img src="../images/amala.png" alt="Amala recipe">
+		<img src="../images/amala.PNG" alt="Amala recipe">
 
 		<h2>Amala Dish</h2>
 
