--- a/recipes/amala.html
+++ b/recipes/amala.html
@@ -5,8 +5,9 @@
 			Amala Recipe
 
 		</title>
+		<link rel="stylesheet" href="../styles.css">
 	</head>
-	<body>
+	<body class="amala-body">
 		<a href="../index.html"> Home</a>
 
 		<h1>Amala Recipe</h1>
