--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
+<body class="lasagna-body">
     <a href="../index.html">Home</a>
     <h1>Lasagna Recipe</h1>
     <img src="../images/lasagna.PNG" alt="Lasagna dish">
