style recipe list in homepage
i made the recipe look better by removing the list style
made it inline and gave each list background

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="home-body">
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="home-list">
         <li><a href="recipes/lasagna.html"> Lasagna Recipe </a></li>
         <li><a href="recipes/jollof-rice.html"> Jollof Rice Recipe </a></li>
         <li><a href="recipes/amala.html"> Amala Recipe </a></li>
